test: overlay lifecycle decisions as a pure class, with counterfactual tests (#26, #36) (#49)
* refactor(overlay): extract every lifecycle decision into a pure OverlayLifecycle

BlockOverlayActivity becomes a thin adapter: each lifecycle callback hands
OverlayLifecycle the platform facts only an Activity knows (isFinishing,
isChangingConfigurations, isDestroyed, whether the lifecycle is at least
STARTED) and executes the ordered Effects that come back.

Behaviour is unchanged. The point is reachability: #8, #15, #26 and two of
#36's four mechanisms are lifecycle ORDERING bugs, and while the decisions
sat inside an Activity the only tool available was a source-level grep that
pins a spelling. As a pure state machine they are ordinary JVM tests.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

* test(overlay): drive the lifecycle decisions as JVM tests, and re-home the contracts

OverlayLifecycleGuardTest runs the pure state machine against the REAL
BlockLaunchGuard through the orderings the platform actually produces --
a re-delivery that never re-runs onResume, a dying instance destroyed
after its replacement, a go-home the platform never honoured -- each with
a counterfactual that runs the pre-fix rule over the same sequence.

The source-level contracts that pinned those orderings by SPELLING now
pin what a value test cannot reach: that the activity still forwards each
callback. The two constants that must stay ordered are compared as values.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

* docs(testing): the no-Robolectric line becomes a costed decision, not a limitation

docs/TESTING.md keeps the statement and states its price: a per-SDK
android-all download and a permanent tax on every ./gradlew test run, to
reach decisions that need no dependency at all -- and names what replaces
it. docs/testing-strategy.md's L3 section stops describing this lane as
pending and describes the class that landed.

tasks/lessons.md records